<?xml version="1.0" encoding="utf-8"?>
<com.expedia.bookings.widget.CarPaymentWidget xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/payment_info_card_view"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="10dp"
...
